--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --backgroud-color:#FFFFFF;
+    --primary-color:#FFFFFF;
     --downriver-color: #072854;
     --boulder-color: #6c757d;
     --jungle-color: #2CBD62;
