--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,14 +1,15 @@
 @import '../../styles/variables.css';
 
 footer {
-    background-color:var(--downriver-color);
+    background-color:var(--primary-color);
     width: 100%;
     height: 300px;
 
     display: flex;
     align-items: center;
     justify-content: space-around;
-    border-radius: 8px;
+    border-top-left-radius: 10px;  
+    border-top-right-radius: 10px;
 }
 
 footer div {
