--- a/src/pages/SignIn/style.css
+++ b/src/pages/SignIn/style.css
@@ -1,12 +1,42 @@
+@import '../../styles//variables.css';
+
 .container-signIn {
-  width: 100;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
-form {
-  width: 600px;
+.content-main-signIn {
+
+  width: 100%;
+  height: 80%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../../assets//images/backgroudImg.png);
+}
+
+.content-form {
+  width: 490px;
+  height: 80%;
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
+  background-color: var(--primary-color);
+}
+
+.content-main-signIn form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
