--- a/src/components/InputText/style.css
+++ b/src/components/InputText/style.css
@@ -1,4 +1,3 @@
-@import '../../styles/variables.css';
 
 .input-container {
   position: relative;
@@ -31,6 +30,11 @@
   color: var(--boulder-color);
   transition: all 0.2s ease-in-out; 
   pointer-events: none;
+}
+.input-container   input:focus {
+  outline: none; 
+  box-shadow: 0 0 5px rgba(25, 25, 26, 0.5);
+  border-color: var(--boulder-color); 
 }
 
 .input-container input:focus + label,
