--- a/src/pages/SignIn/style.css
+++ b/src/pages/SignIn/style.css
@@ -22,8 +22,9 @@
 .content-form {
   width: 490px;
   height: 80%;
-  border-radius: 8px;
+  border-radius: 20px;
   display: flex;
+  gap: 1rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -34,7 +35,6 @@
 
 .content-main-signIn form {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
