--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -76,3 +76,11 @@ textarea:not([rows]) {
 :target {
   scroll-margin-block: 5ex;
 }
+
+a{
+  text-decoration: none;
+  cursor: pointer;
+}
+a:hover, a:focus {
+  color: #007bff;
+}
