--- a/src/components/InputText/style.css
+++ b/src/components/InputText/style.css
@@ -50,6 +50,7 @@
 .input-container p {
   display: flex;
   width: 100%;
+  height: 15px;
   font-size: 12px;
   color: var(--danger-color);
   margin: 0;
