--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,25 +1,43 @@
+.conteiner-main {
+  width: 100%;
+  height: 100vh;
 
-table {
-    width: 50%;
-    border-collapse: collapse;
-  }
-  th {
-    border: 1px solid #ddd;
-    height: 60px;
-    padding: 8px;
-    text-align: left;
-  }
-  td {
-    border-bottom: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  th {
-    background-color: #f4f4f4;
-  }
-  tbody tr:nth-child(even) {
-    background-color: var(--boulder-color);
-  }
-  tbody tr:nth-child(odd) {
-    background-color: var(--primary-color); 
-  }
+  display: flex;
+  flex-direction: column;
+}
+
+.conteiner-main main {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+.content-table {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.content-button {
+  width: 200px;
+  margin: 1rem 0;
+}
+
+.content-checkbox{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+
+
+@media (max-width: 600px) {
+ 
+ .content-table {
+
+  width: 100%;
+  padding: 1rem;
+ }
+
+}
