--- a/src/pages/SignIn/style.css
+++ b/src/pages/SignIn/style.css
@@ -40,3 +40,10 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 768px) {
+
+  .content-main-signIn{
+    padding: 1rem;
+  }
+ }
