--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -4,4 +4,8 @@
     --boulder-color: #6c757d;
     --jungle-color: #2CBD62;
     --danger-color: #dc3232;
+    --green-color:#36ba68;
+    --hover-color: #26466f;
+    --alternatiBlue-color:#2a98b8
+    
   }
