--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,17 +1,27 @@
 @import '../../styles/variables.css';
 
 button {
-    height: 50px;
-    width: 100%;
+    height: 36px;
+    width: 156px;
     max-width: 520px;
     border-radius: 8px;
     color: var(--primary-color);
+    font-weight: bold;
 }
 
 .primaryButton {
-    background-color: var(--jungle-color);
+    background-color: var(--green-color);
 }
 
 .secondaryButton {
-    background-color: var(--danger-color); 
+    background-color: var(--primary-color); 
+}
+
+.alternateButton {
+    background-color: var(--alternatiBlue-color);
+}
+
+button.secondaryButton {
+    color: black;
+    border: 1px solid var(--boulder-color);
 }
